--- a/src/gcode_executor/package.xml
+++ b/src/gcode_executor/package.xml
@@ -14,6 +14,7 @@
   <exec_depend>numpy</exec_depend>
   <exec_depend>time</exec_depend>
   <exec_depend>os</exec_depend>
+  <exec_depend>re</exec_depend>
   <build_depend>rosidl_default_generators</build_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
